<resources>
    <string name="app_name">Sugar Level</string>
    <string name="txtOnbordH6">How to use this application</string>
    <string name="txtOnbordB1">Set your current sugar level and press save button. You can use mg/dl or mmol/l just set the first number you want, and we remember the most preferable system for you.\n\nAlso you can change the date and set exact tags about your activity, food and health. You can check all this data in statistics tab.\n\nWe are happy to help you track your sugar level and stay healthy</string>
    <string name="record">Record</string>
    <string name="save">Save</string>
    <string name="healthy">Healthy</string>
    <string name="dairy">Dairy</string>
    <string name="diet">Diet</string>
    <string name="gardening">Gardening</string>
    <string name="goodSleep">Good sleep</string>
    <string name="highFiberFood">High fiber food</string>
    <string name="housework">Housework</string>
    <string name="seafood">Seafood</string>
    <string name="sex">Sex</string>
    <string name="sport">Sport</string>
    <string name="stretching">Stretching</string>
    <string name="vegetables">Vegetables</string>
    <string name="walking">Walking</string>
    <string name="yoga">Yoga</string>
    <string name="otherPhysicalActivity">Other physical activity</string>
    <string name="txtUnhealthy">Unhealthy</string>
    <string name="alcohol">Alcohol</string>
    <string name="fastfood">Fastfood</string>
    <string name="fruitJuices">Fruit juices</string>
    <string name="irregularEating">Irregular eating</string>
    <string name="lateDinner">Late dinner</string>
    <string name="longSitting">Long sitting</string>
    <string name="noActivity">No activity</string>
    <string name="pastry">Pastry</string>
    <string name="processedFood">Processed food</string>
    <string name="smoking">Smoking</string>
    <string name="soda">Soda</string>
    <string name="stress">Stress</string>
    <string name="sugar">Sugar</string>
    <string name="sweets">Sweets</string>
    <string name="otherUnhealthyHabit">Other unhealthy habit</string>
    <string name="txtSymptoms">Symptoms</string>
    <string name="blurryVision">Blurry vision</string>
    <string name="confused">Confused</string>
    <string name="coordinationProblems">Coordination problems</string>
    <string name="crankyOrImpatient">Cranky or impatient</string>
    <string name="decreasedVision">Decreased vision</string>
    <string name="dizzy">Dizzy</string>
    <string name="dryMouth">Dry mouth</string>
    <string name="drySkin">Dry skin</string>
    <string name="energetic">Energetic</string>
    <string name="fastHeartbeat">Fast heartbeat</string>
    <string name="fatigue">Fatigue</string>
    <string name="feelWell">Feel well</string>
    <string name="goodMood">Good mood</string>
    <string name="happy">Happy</string>
    <string name="headache">Headache</string>
    <string name="healSlowly">Heal slowly</string>
    <string name="hunger">Hunger</string>
    <string name="itchySkin">Itchy skin</string>
    <string name="loseWeightWithoutTrying">Lose weight without trying</string>
    <string name="nausea">Nausea</string>
    <string name="nervous">Nervous</string>
    <string name="nightmares">Nightmares</string>
    <string name="numbOrTinglingHandsOrFeet">Numb or tingling hands or feet</string>
    <string name="paleSkin">Pale skin</string>
    <string name="shaky">Shaky</string>
    <string name="sleepy">Sleepy</string>
    <string name="sweaty">Sweaty</string>
    <string name="thirsty">Thirsty</string>
    <string name="urinateALot">Urinate a lot</string>
    <string name="weak">Weak</string>
    <string name="otherSymptoms">Other symptoms</string>
    <string name="txtCare">Care</string>
    <string name="alphaGlucosidaseInhibitors">Alpha-glucosidase inhibitors</string>
    <string name="amylinomimeticDrug">Amylinomimetic drug</string>
    <string name="biguanides">Biguanides</string>
    <string name="dopamineAgonists">Dopamine agonists</string>
    <string name="dPP4Inhibitors">DPP-4 inhibitors</string>
    <string name="gLP1ReceptorAgonists">GLP-1 receptor agonists</string>
    <string name="insulin">Insulin</string>
    <string name="meglitinides">Meglitinides</string>
    <string name="sGLTInhibitors">SGLT inhibitors</string>
    <string name="sulfonylureas">Sulfonylureas</string>
    <string name="thiazolidinediones">Thiazolidinediones</string>
    <string name="otherDrugs">Other drugs</string>
    <string name="statistics">Statistics</string>
    <string name="btnMinus">The sugar level is reduced</string>
    <string name="btnPlus">The sugar level is increased</string>
    <string name="btnSave">Data saved</string>
    <string name="txtOtherTags">Other tags</string>
    <string name="btnOtherTags">Add</string>
    <string name="editTxtOtherTags">Enter an additional tag</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="toastSave">Saved</string>
    <string name="toastDelete">The entry was deleted</string>
    <string name="stsOnbord">There are no records yet</string>
</resources>