<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.GeneralPage">

    <data>

        <import type="android.view.View" />

        <variable
            name="generalPageViewModel"
            type="com.example.sugarlevel.viewModel.GeneralPageViewModel" />
    </data>



    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_margin="15dp"
            android:gravity="center"
            android:contentDescription="@string/btnSave"
            android:textColor="@color/md_white_1000"
            android:text="7.1 Save"/>

        <ScrollView
            android:id="@+id/scrollGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/txtOnbord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtOnbordH6"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtOnbordH6" />

                    <TextView
                        android:id="@+id/txtOnbordB1"
                        style="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtOnbordB1" />

                </LinearLayout>

                <HorizontalScrollView
                    android:id="@+id/scrollGraph"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_gravity="top"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:id="@+id/linearGraph"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
                            android:id="@+id/aa_chart_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        </com.github.aachartmodel.aainfographics.aachartcreator.AAChartView>

                    </LinearLayout>


                </HorizontalScrollView>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <Button
                        android:id="@+id/deleteCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/txtRecord"
                        style="@style/TextAppearance.MdcTypographyStyles.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:drawableEnd="@drawable/ic_calendar"
                        android:gravity="center"
                        android:text=""
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/txtSugar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:maxLength="5"
                        android:text="7.1"
                        android:textColor="@color/md_black_1000"
                        android:textSize="60sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/btnPlus"
                        app:layout_constraintStart_toEndOf="@+id/btnMinus"
                        app:layout_constraintTop_toBottomOf="@+id/txtRecord" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnMinus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/btnMinus"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/txtSugar"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtRecord"
                        app:layout_constraintVertical_bias="0.7"
                        app:srcCompat="@drawable/ic_minus"
                        app:tint="@color/md_white_1000" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnPlus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/btnPlus"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/txtSugar"
                        app:layout_constraintTop_toBottomOf="@+id/txtRecord"
                        app:layout_constraintVertical_bias="0.7"
                        app:srcCompat="@drawable/ic_plus"
                        app:tint="@color/md_white_1000" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="fill"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/txtHealthy"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/healthy"
                        android:textColor="@color/md_black_1000" />


                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupHealthy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="20dp">

                    </com.google.android.material.chip.ChipGroup>


                    <TextView
                        android:id="@+id/txtUnhealthy"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtUnhealthy"
                        android:textColor="@color/md_black_1000" />


                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupUnhealthy"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="20dp">

                    </com.google.android.material.chip.ChipGroup>

                    <TextView
                        android:id="@+id/txtSymptoms"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtSymptoms"
                        android:textColor="@color/md_black_1000" />


                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupSymptoms"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="20dp">

                    </com.google.android.material.chip.ChipGroup>

                    <TextView
                        android:id="@+id/txtCare"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtCare"
                        android:textColor="@color/md_black_1000" />


                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupCare"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="20dp">

                    </com.google.android.material.chip.ChipGroup>


                    <TextView
                        android:id="@+id/txtOtherTags"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txtOtherTags"
                        android:textColor="@color/md_black_1000" />

                    <EditText
                        android:id="@+id/editTxtOtherTags"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="10dp"
                        android:inputType="textPersonName"
                        android:hint="@string/editTxtOtherTags"
                        android:text="" />

                    <Button
                        android:id="@+id/btnOtherTags"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/btnOtherTags" />

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupOtherTags"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="20dp">

                    </com.google.android.material.chip.ChipGroup>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</layout>